--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
 
-        <div class="day-card" style="display:none;">
+        <div class="day-card">
             <h3 class="day-label">
                 火曜日
                 <span class="date-info">2/17 放送分</span>
