--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
 
 
-        <div class="day-card" style="display:none;">
+        <div class="day-card">
             <h3 class="day-label">
                 水曜日
                 <span class="date-info">2/18 放送分</span>
