--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
 
 
-        <div class="day-card" style="display:none;">
+        <div class="day-card">
             <h3 class="day-label">
                 木曜日
                 <span class="date-info">2/19 放送分</span>
